Nav bar correct spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,17 +16,26 @@ body {
 /* NAVBAR */
 nav {
     display: flex;
-    text-align: center;
+    justify-content: space-between;
     align-items: center;
-    align-content: center;
     height: 64px;
     width: 100%;
     background-color: white;
     margin: 0;
+    position: fixed;
+}
+
+.nav--logo-img {
+    height: 64px;
+    margin-top: 10px;
+}
+
+.logo { 
+    display: flex;
+    align-items: center;
 }
 
 .nav--logo {
-    margin-left: 24px;
     height: 32px;
     font-size: 30px;
     color: gray;
@@ -37,8 +46,11 @@ nav {
     font-weight: 600;
 }
 
-.nav--logo-img {
-    height: 64px;
-    margin-right: -70%;
+.links {
+    display: flex;
 }
 
+.nav--cta {
+    margin: 0 16px 0 0;
+    color: black;
+}
